--- a/style.css
+++ b/style.css
@@ -97,6 +97,9 @@
   width: 100%;
   margin-top: 65px;
 }
+.homeparent .hidden {
+  display: none;
+}
 .homeparent .homebox {
   max-width: 1280px;
   margin: auto;
