--- a/style.scss
+++ b/style.scss
@@ -1165,7 +1165,7 @@ footer {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 43px;
+            margin-bottom: 23px;
 
             h3 {
                 font-size: 22px;
@@ -1193,6 +1193,160 @@ footer {
             border: none;
             border-radius: 100px;
             transition: all 0.2s;
+            margin-bottom: 20px;
+            &:hover {
+                background-color: rgb(90, 134, 28);
+            }
+        }
+        input{
+            width: 100%;
+            padding: 10px ;
+            border: solid 1px rgba(41, 42, 40, 1) ;
+            border-radius: 8px;
+            outline: none;
+        }
+
+    }
+}
+.shoppingbagcard {
+    max-width: 1280px;
+    margin: auto;
+    margin-bottom: 30px;
+
+    h2 {
+        font-size: 28px;
+        font-weight: 400;
+        color: rgba(0, 0, 0, 1);
+        margin-bottom: 113px;
+        text-align: start;
+    }
+
+    .boxs {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: start;
+    }
+
+    .leftbox {
+        width: 775px;
+        padding: 24px;
+        background-color: rgba(251, 251, 251, 1);
+        border-radius: 24px;
+        h3{
+            font-size: 22px;
+            font-weight: 400;
+            color: rgba(0, 0, 0, 1);
+            margin-bottom: 24px;
+        }
+        .cards{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            .cardschild{
+                padding: 10px;
+                display: flex;
+                justify-content: start;
+                align-items: center;
+                gap: 10px;
+                border: solid 1px rgba(117, 121, 108, 1);
+                border-radius: 4px;
+            }
+        }
+    }
+
+    .rightbox {
+        width: 489px;
+        background-color: rgba(251, 251, 251, 1);
+        border-radius: 24px;
+        padding: 32px 36px;
+
+        h2 {
+            margin-bottom: 31px;
+        }
+
+        .subtotal {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            h6 {
+                font-size: 16px;
+                font-weight: 400;
+                color: rgba(68, 72, 61, 1);
+            }
+
+            p {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 24px;
+                letter-spacing: 0.15px;
+
+            }
+
+            margin-bottom: 12px;
+        }
+
+        .shipping {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            h6 {
+                font-size: 16px;
+                font-weight: 400;
+                color: rgba(68, 72, 61, 1);
+            }
+
+            p {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 24px;
+                letter-spacing: 0.15px;
+
+            }
+
+            margin-bottom: 12px;
+        }
+
+        hr {
+            margin-bottom: 24px;
+        }
+
+        .total {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 43px;
+
+            h3 {
+                font-size: 22px;
+                font-weight: 400;
+                color: rgba(68, 72, 61, 1);
+            }
+
+            p {
+
+                font-weight: 700;
+                font-size: 24px;
+                line-height: 28px;
+                letter-spacing: 0px;
+
+            }
+        }
+
+        button {
+            padding: 14px 150px;
+            background-color: rgba(138, 199, 50, 1);
+            color: white;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: 500;
+            border: none;
+            border-radius: 100px;
+            transition: all 0.2s;
 
             &:hover {
                 background-color: rgb(90, 134, 28);
@@ -1202,7 +1356,35 @@ footer {
     }
 }
 
+.modal{
+    
+    margin: auto;
+    width: 414px;
+    padding: 32px;
+    background-color: rgba(255, 255, 255, 1);
+    border: solid 1px rgba(117, 121, 108, 1);
+    box-shadow: 0px 0px 10px rgba(117, 121, 108, 1);
+    border-radius: 24px;
 
+    img{
+        margin-bottom: 10px;
+    }
+    button{
+        padding: 14px 40px;
+            background-color: rgba(138, 199, 50, 1);
+            color: white;
+            cursor: pointer;
+            font-size: 14px;
+            font-weight: 500;
+            border: none;
+            border-radius: 100px;
+            transition: all 0.2s;
+
+            &:hover {
+                background-color: rgb(90, 134, 28);
+            }
+    }
+}
 
 
 
